# LibraryManager

./: CMakeLists.txt  README.md
include/domain/entities/: Loan.hpp
include/domain/entities/books/: ABook.hpp  Novel.hpp  TextBook.hpp
include/domain/entities/users/: Professor.hpp  Student.hpp
include/entities/: ParsedInput.hpp
include/interfaces/: IBook.hpp  IBookRepository.hpp  IBorrowable.hpp  ICommand.hpp  ICommandRepository.hpp  INotificationService.hpp  IRepository.hpp
include/models/: Library.hpp  Loan.hpp
include/models/books/: ABook.hpp  Novel.hpp  TextBook.hpp
include/models/commands/: Add.hpp  Borrow.hpp  Commands.hpp  Delete.hpp  Display.hpp  Help.hpp  Login.hpp  Logout.hpp  Quit.hpp  Return.hpp
include/models/users/: AUser.hpp  Guest.hpp  Professor.hpp  Student.hpp
include/repositories/: BookRepository.hpp  CommandRepository.hpp  InMemoryBookRepository.hpp  UserRepository.hpp
include/services/: FileRepository.hpp  InputService.hpp  LoanService.hpp
include/services/notifications/: EmailNotificationService.hpp  SMSNotificationService.hpp
include/types/: ParsedCommand.hpp
include/utils/: BookFactory.hpp  InputParser.hpp  Logger.hpp
src/: main.cpp
src/commands/: Add.cpp  Borrow.cpp  Delete.cpp  Display.cpp  Help.cpp  Login.cpp  Logout.cpp  Quit.cpp  Return.cpp
src/repositories/: CommandRepository.cpp  InMemoryBookRepository.cpp
src/services/: InputService.cpp  LoanService.cpp
src/utils/: BookFactory.cpp  InputParser.cpp  Logger.cpp
